tests/002_int.pan.out
tests/002_int.pan:22:1-3: error: unable to verify type of f7
tests/002_int.pan:25:1-3: error: unable to verify type of f8
tests/002_int.pan:28:1-3: error: unable to verify type of f9
tests/002_int.pan:31:1-4: error: unable to verify type of f10
tests/002_int.pan:34:7-8: error: invalid subtype: â„¤ <: ðŸ™
tests/002_int.pan:37:7-8: error: invalid subtype: â„¤ <: ðŸ™
tests/002_int.pan:40:7-8: error: invalid subtype: â„¤ <: ð”¹
tests/002_int.pan:43:7-8: error: invalid subtype: â„¤ <: ð”¹
tests/002_int.pan:46:7-8: error: invalid subtype: â„¤ <: ð•Š
tests/002_int.pan:49:7-8: error: invalid subtype: â„¤ <: ð•Š
f0 : {_:â„¤ | _ = 1}
f1 : â„¤
f2 : {v:â„¤ | v = 1}
f3 : {v:â„¤ | v = 1}
f4 : {v:â„¤ | v â‰¥ 1}
f5 : {v:â„¤ | v < 2}
f6 : {v:â„¤ | v â‰  2}